fixed labels in hero > div to display block so it aligns with icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,10 @@ h1 {
     gap: 10rem;
 }
 
+.hero > div > label {
+    display: block;
+}
+
 .icons {
     width: 150px;
 }
